rbs/rbs-backend-monolith-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-backend-monolith-prod-deploy
  labels:
    app: rbs-backend-monolith-prod-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rbs-backend-monolith-prod-deploy
  template:
    metadata:
      labels:
        app: rbs-backend-monolith-prod-deploy
    spec:
      containers:
      - name: rbs-backend-monolith-prod-deploy
        image: ldamasio/rbs-backend-monolith-prod:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "1000Mi"
            cpu: "750m"
          limits:
            memory: "1000Mi"
            cpu: "1500m"
