rbs/rbs-backend-nginx-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-backend-prod-nginx-deploy
  labels:
    app: rbs-backend-prod-nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rbs-backend-prod-nginx-deploy
  template:
    metadata:
      labels:
        app: rbs-backend-prod-nginx-deploy
    spec:
      containers:
      - name: rbs-backend-prod-nginx-deploy
        image: nginx:stable-alpine
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: rbs-backend-nginx-prod-configmap
          mountPath: /etc/nginx/conf.d
      volumes:
        - name: rbs-backend-nginx-prod-configmap
          configMap:
            name: rbs-backend-nginx-prod-configmap
