rbs/rbs-frontend-prod-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-frontend-prod-deploy
spec:
  selector:
    matchLabels:
      app: rbs-frontend-prod-deploy
  template:
    metadata:
      labels:
        app: rbs-frontend-prod-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3404"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: rbs-frontend-deploy
          image: ldamasio/rbs-frontend:latest
          ports:
          - containerPort: 3403
