rbs/rbs-odoo-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbs-odoo-deploy
spec:
  selector:
    matchLabels:
      app: rbs-odoo-deploy
  template:
    metadata:
      labels:
        app: rbs-odoo-deploy
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "3408"
        prometheus.io/path: "/metrics"
    spec:
      containers:
        - name: rbs-odoo-deploy
          image: odoo:latest
          ports:
          - containerPort: 3408
          resources:
            requests:
              memory: "100Mi"
              cpu: "250m"
            limits:
              memory: "200Mi"
              cpu: "500m"
