rbs/rbs-backend-monolith-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbs-backend-monolith-prod-svc
spec:
  selector:
    app: django
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
