rbs/rbs-backend-nginx-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbs-backend-nginx-prod-svc
spec:
  selector:
    app: rbs-backend-nginx-prod-deploy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
