rbs/rbs-frontend-prod-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbs-frontend-prod-svc
spec:
  selector:
    app: rbs-frontend-prod-deploy
  ports:
    - port: 80
      targetPort: 3403
  type: LoadBalancer
