rbs/rbs-odoo-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: rbs-odoo-svc
spec:
  selector:
    app: rbs-odoo-deploy
  ports:
    - port: 80
      targetPort: 8069
  type: LoadBalancer
