rbs/rbs-backend-monolith-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbs-backend-monolith-prod-ingress
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt"
    spec.ingressClassName: "public"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - backend.robsonbot.com
    secretName: rbs-frontend-prod-tls
  rules:
  - host: backend.robsonbot.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbs-backend-monolith-prod-svc
            port:
              number: 80
