rbs/rbs-backend-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbs-backend-monolith-prod-ingress
  annotations:
    cert-manager.io/cluster-issuer: "rbs-backend-monolith-prod-clusterissuer"
    spec.ingressClassName: "public"
spec:
  tls:
  - hosts:
    - backend.robsonbot.com
    secretName: rbs-backend-monolith-prod-secret
  rules:
  - host: backend.robsonbot.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbs-backend-monolith-prod-svc
            port:
              number: 8000
      - pathType: Prefix
        path: "/static"
        backend:
          service:
            name: rbs-backend-nginx-prod-svc
            port:
              number: 80
