rbs/rbs-frontend-prod-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rbs-frontend-ingress
spec:
  tls:
  - hosts:
    - robsonbot.com
    secretName: rbs-frontend-prod-cert
  rules:
  - host: robsonbot.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rbs-frontend-svc
            port:
              number: 80
